Added modmenu integration and localisation